# alfred-datetime-format-converter

./: .gitignore  .releaserc.json  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  publish-release-artifacts.yml
tests/: test_process.py
workflow/: info.plist  process.py
